# EO-table-management-system

./: .gitignore  README.md  lookups.json  main.py  pyproject.toml  requirements.txt
app/: data_store.py  entry_form.py  lookup_editor.py  main_window.py  pl_mapper.py  user_selector.py
data/PL output/: PL map.xlsx
data/excel template/: EO_Import_Template.xlsx
