[tool.poetry]
name = "eo-table-management-system"
version = "0.1.0"
description = "EO Table Management System — dark-mode UI for managing EO Excel data"
authors = ["HP Input Device"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
customtkinter = ">=5.2.2"
openpyxl = ">=3.1.5"
tkcalendar = ">=1.6.1"
pyxlsb = "^1.0.10"

[tool.poetry.scripts]
eo-app = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
